--- a/breakpoint/breakpoint/Base.lproj/Main.storyboard
+++ b/breakpoint/breakpoint/Base.lproj/Main.storyboard
@@ -129,7 +129,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="W5J-7L-Pyd" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="749.60000000000002" y="-320.68965517241384"/>
+            <point key="canvasLocation" x="750" y="-353"/>
         </scene>
         <!--Create PostVC-->
         <scene sceneID="cbg-ic-KO6">
@@ -481,12 +481,12 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4Nw-L8-lE0" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="749.60000000000002" y="359.37031484257875"/>
+            <point key="canvasLocation" x="750" y="380"/>
         </scene>
         <!--Discussion FeedVC-->
         <scene sceneID="Jpv-kQ-EAD">
             <objects>
-                <viewController id="sjg-Go-wNe" customClass="DiscussionFeedVC" customModule="breakpoint" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="DiscussionFeedVC" id="sjg-Go-wNe" customClass="DiscussionFeedVC" customModule="breakpoint" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="UbK-ZM-P4A">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -666,7 +666,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="NUH-1i-hEI" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="744.79999999999995" y="1029.5352323838081"/>
+            <point key="canvasLocation" x="750" y="1071"/>
         </scene>
         <!--Create New ChatVC-->
         <scene sceneID="AHA-AH-JEc">
@@ -1317,7 +1317,7 @@
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="HuB-VB-40B" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="0.0" y="0.0"/>
+            <point key="canvasLocation" x="-135" y="0.0"/>
         </scene>
     </scenes>
     <resources>
